--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -197,10 +197,12 @@
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch" />
         </Grid>
-        <Grid Margin="0,4">
+        <Grid Margin="0,8,0,0"
+              MinHeight="4">
             <TextBlock x:Name="tb_info"
                        HorizontalAlignment="Stretch"
-                       TextWrapping="WrapWholeWords" />
+                       TextWrapping="WrapWholeWords"
+                       Visibility="{x:Bind tb_info.Text, Mode=OneWay, Converter={StaticResource EmptyStringToCollapsedConverter}}" />
             <ProgressBar x:Name="pb_Loading"
                          Visibility="{x:Bind pb_Loading.IsIndeterminate, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}" />
         </Grid>
