More comments info
Former-commit-id: bd31a005bdf2b5848cdc132105cc4bce89eca5ee [formerly 9e70e6294880bbd8ae2a3d5848a8c84496cb51d4]
Former-commit-id: 87b9043191cd2c121f98c3946d3b8bc89fba07a9

--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -479,7 +479,7 @@
                                                Text="Comments" />
                                     <TextBlock Style="{StaticResource PivotHeaderSuperscriptTextBlockStyle}"
                                                Text="{x:Bind VM.Gallery.Comments.Count, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter='Views/GalleryPage/PivotHeaderNumberFormatString'}"
-                                               Visibility="{x:Bind VM.Gallery.Comments, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}" />
+                                               Visibility="{x:Bind VM.Gallery.Comments.IsLoaded, Mode=OneWay, Converter={StaticResource TrueToVisibleConverter}}" />
                                 </Grid>
                             </PivotItem.Header>
                             <ListView x:Name="lv_Comments"
@@ -506,13 +506,13 @@
                                                    HorizontalAlignment="Center"
                                                    Style="{StaticResource BaseTextBlockStyle}"
                                                    Text="No comments"
-                                                   Visibility="{x:Bind VM.Gallery.Comments.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}" />
+                                                   Visibility="{x:Bind VM.Gallery.Comments.IsEmpty, Mode=OneWay, Converter={StaticResource TrueToVisibleConverter}}" />
                                         <TextBlock x:Uid="Views/GalleryPage/CommentsLoadingTextBlock"
                                                    Margin="12"
                                                    HorizontalAlignment="Center"
                                                    Style="{StaticResource BaseTextBlockStyle}"
                                                    Text="Loading comments..."
-                                                   Visibility="{x:Bind VM.Gallery.Comments, Converter={StaticResource NullToVisibleConverter}, Mode=OneWay}" />
+                                                   Visibility="{x:Bind VM.Gallery.Comments.IsLoaded, Converter={StaticResource FalseToVisibleConverter}, Mode=OneWay}" />
                                     </Grid>
                                 </ListView.Header>
                             </ListView>
